--- a/FuncPDF/PrivacyPolicyCN.html
+++ b/FuncPDF/PrivacyPolicyCN.html
@@ -48,6 +48,11 @@
         th {
             background-color: #f0f0f0;
         }
+        .contact {
+            margin-top: 30px;
+            padding-top: 10px;
+            border-top: 1px solid #000;
+        }
     </style>
 </head>
 <body>
@@ -90,7 +95,7 @@
     </tr>
     <tr>
         <td><strong>文件数据（用户生成内容）</strong></td>
-        <td><strong>目的：</strong> 实现 FuncPDF 的核心功能，包括文件编辑、转换和存储。</td>
+        <td><strong>目的：</strong> 实现 FuncPDF 的核心功能，允许用户从设备文件管理器、本地相册（照片库）中选择文件。所有文件的访问、编辑、转换、存储均在本地完成，仅用于 App 的核心功能。</td>
         <td><strong style="font-weight: bold;">仅存储在设备本地（App 沙盒或您个人的 iCloud）。我们不访问或上传您的文件。</strong></td>
     </tr>
     <tr>
