--- a/FuncPDF/PrivacyPolicy.html
+++ b/FuncPDF/PrivacyPolicy.html
@@ -28,12 +28,13 @@
             margin-top: 30px;
         }
         a {
-            color: #007bff;
+            color: #007bff; /* Keep hyperlinks blue */
             text-decoration: underline;
         }
         ul, ol {
             padding-left: 20px;
         }
+        /* Table for clear data collection presentation */
         table {
             width: 100%;
             border-collapse: collapse;
@@ -60,101 +61,103 @@
 
 <p><strong>Effective Date:</strong> November 20, 2025</p>
 
-<h2>1. Introduction</h2>
-<p>Your trust is of paramount importance to us, and we are deeply aware of the importance of your personal information. The provider of the FuncPDF service (hereinafter referred to as "we" or "the Service") has formulated this Privacy Policy (the "Policy") to comply with legal requirements and remind you that:</p>
+<h2>Introduction</h2>
+<p>Your trust is extremely important to us, and we deeply understand the significance of personal information to you. We will take corresponding security protection measures as required by laws and regulations to the best of our ability to ensure the security and controllability of your personal information. In view of this, the service provider of FuncPDF (hereinafter referred to as "we" or "this service") has formulated this "Privacy Policy" (hereinafter referred to as "this Policy") and reminds you:</p>
 <p>This Policy applies to all products and services provided by <strong>FuncPDF</strong>.</p>
-<p><strong>Please read this Policy carefully and thoroughly understand it before using any FuncPDF product or service. By using FuncPDF, you confirm that you have fully understood and agreed to this Policy.</strong> If you have any questions, comments, or suggestions regarding this Policy, please contact us using the information provided at the end of this document.</p>
+<p>Before using any FuncPDF product or service, please be sure to read and thoroughly understand this Policy, especially the terms highlighted in **bold**, which you should read carefully. Only start using our services after you have fully understood and agreed to this Policy. If you have any questions, comments, or suggestions regarding the content of this Policy, you can contact us through the contact information provided at the end of this document.</p>
 
-<h2>2. Definitions</h2>
+<h2>Part I: Definitions</h2>
 <ul>
     <li><strong>FuncPDF:</strong> Refers to the FuncPDF mobile application.</li>
-    <li><strong>Personal Information:</strong> Refers to various information recorded electronically or otherwise that can identify a specific natural person, either alone or combined with other information, or reflect the activities of a specific natural person.</li>
-    <li><strong>Personal Sensitive Information:</strong> Includes but is not limited to identification numbers, personal biometric information, bank accounts, property information, track records, transaction information, etc. (FuncPDF <strong>does not</strong> actively collect such personal sensitive information).</li>
+    <li><strong>Personal Information:</strong> Refers to all kinds of information recorded electronically or by other means that can independently or in combination with other information identify a specific natural person or reflect the activities of a specific natural person.</li>
+    <li><strong>Sensitive Personal Information:</strong> Refers to information including identity document numbers, personal biological identification information, bank accounts, property information, track and trace, transaction information, etc. (FuncPDF does not actively collect such sensitive personal information).</li>
 </ul>
 
-<h2>3. Information We Do Not Collect (Key Privacy Feature)</h2>
-<p><strong>FuncPDF does not provide user registration or login functionality.</strong> Therefore, we <strong>do not</strong> collect any directly identifying personal account information from you, such as:</p>
-<ul>
-    <li>Phone numbers</li>
-    <li>Email addresses</li>
-    <li>Names</li>
-</ul>
+<h2>Part II: Privacy Policy Text</h2>
 
-<h2>4. Information We Collect and How We Use It</h2>
-<p>We only collect and use your information for the purposes detailed below:</p>
+<h3>I. How We Collect and Use Your Information</h3>
+
+<p>FuncPDF does not provide user registration or login functions, thus we do not collect your mobile phone number, email address, or other direct identity information. We only collect and use your information for the following purposes:</p>
 
 <table>
     <thead>
     <tr>
-        <th>Data Category Collected</th>
-        <th>Purpose and Use</th>
-        <th>Data Storage Location</th>
+        <th>Category of Data Collected</th>
+        <th>Purpose and Use of Collection</th>
+        <th>Storage Location</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td><strong>Purchase History (IAP Transaction Data)</strong></td>
-        <td><strong>Purpose:</strong> To verify and manage the user's subscription/purchase rights, confirm the validity period of the service, and deliver the purchased features.</td>
-        <td><strong style="font-weight: bold;">Stored only locally on the device (App Sandbox).</strong> This data is <strong>not</strong> uploaded to our servers.</td>
+        <td><strong>Purpose:</strong> To verify and manage user subscription/purchase rights, confirm the validity period of the service, and provide the purchased service.</td>
+        <td><strong style="font-weight: bold;">Stored only locally on the device (App sandbox)</strong> and is not uploaded to our servers.</td>
     </tr>
     <tr>
         <td><strong>File Data (User Generated Content)</strong></td>
-        <td><strong>Purpose:</strong> To enable the core features of FuncPDF, allowing users to select files from the device's file manager and photo library. All file access, editing, conversion, and storage are performed <strong>locally</strong> on your device and are solely for the App's core functionality.</td>
-        <td><strong style="font-weight: bold;">Stored only locally on the device (App Sandbox or your personal iCloud). We do not access, view, or upload your files to our servers.</strong></td>
+        <td><strong>Purpose:</strong> To realize the core functions of FuncPDF, allowing users to select files from the device's file manager and local album (photo library). All file access, editing, conversion, and storage are completed locally and are used only for the App's core functionality.</td>
+        <td><strong style="font-weight: bold;">Stored only locally on the device (App sandbox or your personal iCloud). We do not access or upload your files.</strong></td>
     </tr>
     <tr>
         <td>Device and Usage Information</td>
-        <td><strong>Purpose:</strong> Internal data analysis to optimize product performance and diagnose faults. <strong>Information includes:</strong> Device model, operating system version, application version, and session start/stop times.</td>
-        <td>Stored locally on the device. We currently <strong>do not</strong> integrate third-party analytics SDKs.</td>
+        <td><strong>Purpose:</strong> Internal data analysis, product performance optimization, and fault diagnosis. <strong>Information includes:</strong> Device model, operating system version, application version, and session start/stop time.</td>
+        <td>Local to the device. We have not integrated any third-party analytics SDKs at this time.</td>
     </tr>
     </tbody>
 </table>
 
 <p><strong>Regarding Cookies and Similar Technologies:</strong></p>
-<p>The FuncPDF App itself <strong>does not</strong> use cookies or similar tracking technologies. Any mention of cookies in associated materials only applies to any related websites we may operate, not the App itself.</p>
+<p>The FuncPDF App itself does not use Cookies or similar technologies. The description of Cookies in this policy only applies to any associated websites we may operate and is irrelevant to the App itself.</p>
 
-<h2>5. Data Sharing, Transfer, and Disclosure</h2>
-<p>We are committed to <strong>not</strong> sharing, transferring, or publicly disclosing your Personal Information to any other company, organization, or individual, except in the following circumstances:</p>
+<h3>II. How We Share, Transfer, and Disclose Your Personal Information</h3>
+
+<p>We commit not to share, transfer, or publicly disclose your personal information with any other company, organization, or individual, except in the following circumstances:</p>
 <ol>
-    <li>With explicit consent: Sharing, transferring, or disclosing with your clear authorization.</li>
-    <li>Legal Requirements: As required by applicable laws, legal procedures, litigation, or mandatory requirements from governmental authorities.</li>
-    <li>Sharing with Authorized Partners (Currently None): Our service currently does not integrate any third-party SDKs that collect your Personal Information. Should we integrate future partners, we will update this Policy promptly and seek your renewed authorization and consent.</li>
+    <li>Sharing, transferring, or disclosing with explicit consent.</li>
+    <li>According to the requirements of laws and regulations, legal procedures, litigation, or mandatory requirements of government authorities.</li>
+    <li>Sharing with authorized partners (None currently): Our service has not yet integrated any third-party SDKs that require the collection of your personal information. If new partners are added in the future, we will promptly update this Policy and seek your authorized consent again.</li>
 </ol>
 
-<h2>6. Data Retention and Storage</h2>
+<h3>III. How We Store Information</h3>
 <ol>
-    <li>Storage Location: Personal Information collected and generated during our operation within the People's Republic of China is stored within China.</li>
-    <li>Retention Period: We will retain your Personal Information (such as purchase status) only for the period necessary to achieve the purposes described in this Policy, unless mandatory legal retention requirements apply.</li>
-    <li>Data Deletion: Since FuncPDF does not store account information, uninstalling the App effectively deletes all stored local purchase status and usage data within the App's sandbox on your device. Upon exceeding the retention period, we will delete your Personal Information as required by applicable law.</li>
+    <li>Location of information storage: Personal information collected and generated during our operations in the People's Republic of China is stored within China.</li>
+    <li>Information storage duration: We will only retain your personal information (such as purchase status) for the period necessary to achieve the purposes described in this Policy, unless mandatory retention requirements are specified by law.</li>
+    <li>Information deletion: After your personal information exceeds the retention period, we will delete your personal information in accordance with applicable legal requirements. Since FuncPDF does not store account information, deleting the App signifies the deletion of all information stored in the App sandbox.</li>
 </ol>
 
-<h2>7. Security Measures</h2>
-<p>We have implemented security protection measures that meet industry standards to protect the Personal Information you provide, preventing unauthorized access, public disclosure, use, modification, damage, or loss of data. For example, we use SSL encryption to ensure the confidentiality of data during transmission.</p>
-<p>We will take all reasonable and practical measures to ensure that no irrelevant Personal Information is collected. While the internet is not 100% secure, we will strive to ensure the security of any information you transmit to us. In the event of a Personal Information security incident, we will promptly inform you of the basic situation and potential impact as required by laws and regulations.</p>
+<h3>IV. How We Protect the Security of Your Personal Information</h3>
+<p>We have used industry-standard security protection measures to protect the personal information you provide, preventing unauthorized access, public disclosure, use, modification, damage, or loss of data. For example, we use SSL encryption to ensure the confidentiality of data during transmission. We will take all reasonable and feasible measures to ensure that no irrelevant personal information is collected.</p>
+<p>The internet environment is not 100% secure, and we will do our best to ensure or guarantee the security of any information you send to us. In the unfortunate event of a personal information security incident, we will, in accordance with the requirements of laws and regulations, promptly inform you of the basic situation and possible impact of the incident, etc.</p>
 
-<h2>8. Your Rights and Subscription Management</h2>
-<p>Due to the non-collection of directly identifying personal account information, your control over your information is primarily managed through the following methods:</p>
+<h3>V. How You Can Manage Your Information and Subscriptions</h3>
+
+<p>Since FuncPDF does not collect personal account information that can directly identify you, your control over personal information is mainly achieved in the following ways:</p>
 <ol>
-    <li>Data Deletion: You can clear all purchase status and usage data stored locally on your device by uninstalling the App or clearing the App cache.</li>
-    <li>File Access and Deletion: You can access, edit, and delete the files you store <strong>at any time within the App.</strong></li>
-    <li>Subscription Management: For IAP subscription services purchased through the Apple App Store, you can manage your subscription at any time using the official Apple link:
+    <li>Deletion of Data: You can clear all purchase status and usage data stored locally on your device by uninstalling the App or clearing the App cache.</li>
+    <li>Access and Delete Files: You can access, edit, and delete the files you store within the App at any time.</li>
+    <li>Managing Subscriptions: For IAP subscription services purchased through the Apple App Store, you can manage your subscription at any time via the following official Apple link:
         <p><strong>App Store Subscription Management Link:</strong> <a href="https://apps.apple.com/account/subscriptions">https://apps.apple.com/account/subscriptions</a></p>
     </li>
-    <li>Making Requests: If you need to exercise other rights or make requests regarding this Policy, please contact us via the email address provided below.</li>
+    <li>Making Requests: If you need to exercise other rights and make requests, you can contact us through the contact email below.</li>
 </ol>
 
-<h2>9. Children's Privacy</h2>
-<p>FuncPDF is not intended for use by children under the age of 13. If you are under the age of 18, you should review this Policy and use the FuncPDF software and related services under the supervision and guidance of your legal guardian and with their consent. We take the protection of minors' Personal Information seriously.</p>
+<h3>VI. Terms for Minors</h3>
 
-<h2>10. Updates to This Privacy Policy</h2>
-<p>We may adjust or change this Privacy Policy from time to time. We will announce any updates on our official website or within the App, indicating the updated date. The adjusted or changed content will take effect <strong>7 days</strong> after being announced or published. Your continued use of any of our services after the Policy has been adjusted or changed indicates that you have fully read, understood, and accepted the modified Privacy Policy.</p>
+<p>If the user is a minor under the age of 18, they should read this agreement and use FuncPDF software and related services under the supervision, guidance, and with the consent of their guardian.</p>
+<p>We attach great importance to the protection of personal information of minors. Minor users should strengthen their personal protection awareness and be cautious when filling in personal information. Please use this service correctly under the guidance of a guardian.</p>
 
-<h2>11. Dispute Resolution and Governing Law</h2>
-<p>The place of execution of this agreement is the People's Republic of China. If a dispute arises between you and the Service, both parties should try to resolve it through friendly negotiation. Should negotiation fail, you agree to submit the dispute to the People's Court with jurisdiction in the location of the Service provider for litigation.</p>
+<h3>VII. How This Privacy Policy is Updated</h3>
+
+<p>We may adjust or change this Privacy Policy from time to time. We will announce any updates on our official website or within the App by marking the updated time. The adjusted or changed content will take effect 7 days after the notification or announcement. If you continue to use any of the services we provide after the Privacy Policy has been adjusted or changed, it means that you have fully read, understood, and accepted the modified Privacy Policy.</p>
+
+<h3>VIII. Dispute Resolution and Others</h3>
+
+<p>The signing location of this agreement is the People's Republic of China. If a dispute arises between you and this service, both parties should try to resolve it through friendly negotiation. If the negotiation fails, you agree that the dispute shall be submitted to the People's Court with jurisdiction in the location of the service provider for litigation.</p>
+<p>You and the service provider are independent entities, and this agreement does not constitute any form of express or implied warranty or condition.</p>
 
 <div class="contact">
     <h3>Contact Us</h3>
-    <p>If you have any questions, comments, or suggestions regarding this Privacy Policy, please contact us through the following methods:</p>
+    <p>If you have any questions, comments, or suggestions about this Privacy Policy, please contact us through the following methods:</p>
     <p><strong>Email:</strong> <a href="mailto:func_app@163.com">func_app@163.com</a></p>
     <p><strong>Service Provider:</strong> zhanhao liu</p>
 </div>
