--- a/FuncPDF/PrivacyPolicy.html
+++ b/FuncPDF/PrivacyPolicy.html
@@ -59,18 +59,18 @@
 
 <h1>FuncPDF Privacy Policy</h1>
 
-<p><strong>Effective Date:</strong> November 20, 2025</p>
+<p><b>Effective Date:</b> November 20, 2025</p>
 
 <h2>Introduction</h2>
 <p>Your trust is extremely important to us, and we deeply understand the significance of personal information to you. We will take corresponding security protection measures as required by laws and regulations to the best of our ability to ensure the security and controllability of your personal information. In view of this, the service provider of FuncPDF (hereinafter referred to as "we" or "this service") has formulated this "Privacy Policy" (hereinafter referred to as "this Policy") and reminds you:</p>
-<p>This Policy applies to all products and services provided by <strong>FuncPDF</strong>.</p>
-<p>Before using any FuncPDF product or service, please be sure to read and thoroughly understand this Policy, especially the terms highlighted in **bold**, which you should read carefully. Only start using our services after you have fully understood and agreed to this Policy. If you have any questions, comments, or suggestions regarding the content of this Policy, you can contact us through the contact information provided at the end of this document.</p>
+<p>This Policy applies to all products and services provided by <b>FuncPDF</b>.</p>
+<p>Before using any FuncPDF product or service, please be sure to read and thoroughly understand this Policy, especially the terms highlighted in <b>bold</b>, which you should read carefully. Only start using our services after you have fully understood and agreed to this Policy. If you have any questions, comments, or suggestions regarding the content of this Policy, you can contact us through the contact information provided at the end of this document.</p>
 
 <h2>Part I: Definitions</h2>
 <ul>
-    <li><strong>FuncPDF:</strong> Refers to the FuncPDF mobile application.</li>
-    <li><strong>Personal Information:</strong> Refers to all kinds of information recorded electronically or by other means that can independently or in combination with other information identify a specific natural person or reflect the activities of a specific natural person.</li>
-    <li><strong>Sensitive Personal Information:</strong> Refers to information including identity document numbers, personal biological identification information, bank accounts, property information, track and trace, transaction information, etc. (FuncPDF does not actively collect such sensitive personal information).</li>
+    <li><b>FuncPDF:</b> Refers to the FuncPDF mobile application.</li>
+    <li><b>Personal Information:</b> Refers to all kinds of information recorded electronically or by other means that can independently or in combination with other information identify a specific natural person or reflect the activities of a specific natural person.</li>
+    <li><b>Sensitive Personal Information:</b> Refers to information including identity document numbers, personal biological identification information, bank accounts, property information, track and trace, transaction information, etc. (FuncPDF does not actively collect such sensitive personal information).</li>
 </ul>
 
 <h2>Part II: Privacy Policy Text</h2>
@@ -89,24 +89,24 @@
     </thead>
     <tbody>
     <tr>
-        <td><strong>Purchase History (IAP Transaction Data)</strong></td>
-        <td><strong>Purpose:</strong> To verify and manage user subscription/purchase rights, confirm the validity period of the service, and provide the purchased service.</td>
-        <td><strong style="font-weight: bold;">Stored only locally on the device (App sandbox)</strong> and is not uploaded to our servers.</td>
+        <td><b>Purchase History (IAP Transaction Data)</b></td>
+        <td><b>Purpose:</b> To verify and manage user subscription/purchase rights, confirm the validity period of the service, and provide the purchased service.</td>
+        <td><b>Stored only locally on the device (App sandbox)</b> and is not uploaded to our servers.</td>
     </tr>
     <tr>
-        <td><strong>File Data (User Generated Content)</strong></td>
-        <td><strong>Purpose:</strong> To realize the core functions of FuncPDF, allowing users to select files from the device's file manager and local album (photo library). All file access, editing, conversion, and storage are completed locally and are used only for the App's core functionality.</td>
-        <td><strong style="font-weight: bold;">Stored only locally on the device (App sandbox or your personal iCloud). We do not access or upload your files.</strong></td>
+        <td><b>File Data (User Generated Content)</b></td>
+        <td><b>Purpose:</b> To realize the core functions of FuncPDF, allowing users to select files from the device's file manager and local album (photo library). All file access, editing, conversion, and storage are completed locally and are used only for the App's core functionality.</td>
+        <td><b>Stored only locally on the device (App sandbox or your personal iCloud). We do not access or upload your files.</b></td>
     </tr>
     <tr>
         <td>Device and Usage Information</td>
-        <td><strong>Purpose:</strong> Internal data analysis, product performance optimization, and fault diagnosis. <strong>Information includes:</strong> Device model, operating system version, application version, and session start/stop time.</td>
+        <td><b>Purpose:</b> Internal data analysis, product performance optimization, and fault diagnosis. <b>Information includes:</b> Device model, operating system version, application version, and session start/stop time.</td>
         <td>Local to the device. We have not integrated any third-party analytics SDKs at this time.</td>
     </tr>
     </tbody>
 </table>
 
-<p><strong>Regarding Cookies and Similar Technologies:</strong></p>
+<p><b>Regarding Cookies and Similar Technologies:</b></p>
 <p>The FuncPDF App itself does not use Cookies or similar technologies. The description of Cookies in this policy only applies to any associated websites we may operate and is irrelevant to the App itself.</p>
 
 <h3>II. How We Share, Transfer, and Disclose Your Personal Information</h3>
@@ -136,7 +136,7 @@
     <li>Deletion of Data: You can clear all purchase status and usage data stored locally on your device by uninstalling the App or clearing the App cache.</li>
     <li>Access and Delete Files: You can access, edit, and delete the files you store within the App at any time.</li>
     <li>Managing Subscriptions: For IAP subscription services purchased through the Apple App Store, you can manage your subscription at any time via the following official Apple link:
-        <p><strong>App Store Subscription Management Link:</strong> <a href="https://apps.apple.com/account/subscriptions">https://apps.apple.com/account/subscriptions</a></p>
+        <p><b>App Store Subscription Management Link:</b> <a href="https://apps.apple.com/account/subscriptions">https://apps.apple.com/account/subscriptions</a></p>
     </li>
     <li>Making Requests: If you need to exercise other rights and make requests, you can contact us through the contact email below.</li>
 </ol>
@@ -158,8 +158,8 @@
 <div class="contact">
     <h3>Contact Us</h3>
     <p>If you have any questions, comments, or suggestions about this Privacy Policy, please contact us through the following methods:</p>
-    <p><strong>Email:</strong> <a href="mailto:func_app@163.com">func_app@163.com</a></p>
-    <p><strong>Service Provider:</strong> zhanhao liu</p>
+    <p><b>Email:</b> <a href="mailto:func_app@163.com">func_app@163.com</a></p>
+    <p><b>Service Provider:</b> zhanhao liu</p>
 </div>
 
 </body>
