--- a/FuncPDF/TermsOfUseCN.html
+++ b/FuncPDF/TermsOfUseCN.html
@@ -1,1 +1,213 @@
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FuncPDF 用户协议</title>
+    <style>
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+            line-height: 1.8;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h1 {
+            text-align: center;
+            padding-bottom: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        h2 {
+            margin-top: 30px;
+            color: #000;
+        }
+        h3 {
+            margin-top: 20px;
+            color: #000;
+        }
+        ol, ul {
+            padding-left: 20px;
+        }
+        b {
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
 
+<h1>FuncPDF 用户协议</h1>
+
+<div id="intro">
+    <h2>FuncPDF 用户协议 · 引言</h2>
+    <p>请您在使用 <b>FuncPDF</b>（指 FuncPDF 应用程序及其相关软件，以下简称 <b>FuncPDF</b>）之前，请务必仔细阅读并理解《FuncPDF 用户协议》（以下简称“本协议”）中规定的所有权利和限制。</p>
+    <p><b>zhanhao liu</b>（以下简称：<b>开发者</b> 或 <b>本开发者</b>）一向尊重并会严格保护用户在使用 FuncPDF 时的合法权益（包括用户隐私、用户数据等）不受到任何侵犯。本协议（包括本文最后部分的隐私政策）是用户（以下简称“<b>用户</b>”或“<b>您</b>”）与 <b>开发者</b> 之间针对 FuncPDF 相关事项最终的、完整的且排他的协议。</p>
+    <p>本协议内容同时包括开发者已经发布及后续可能不断发布的关于 FuncPDF 软件及相关服务的相关协议、规则等内容。前述内容一经正式发布，并以适当的方式送达用户（应用内公布、系统通知等），即为本协议不可分割的组成部分，您应同样遵守。</p>
+    <p><b>本协议将对用户使用FuncPDF的行为产生法律约束力，您已承诺和保证有权利和能力订立本协议。用户开始使用FuncPDF将视为已经接受本协议，请认真阅读并理解本协议中各种条款，包括免除和限制本开发者的免责条款和对用户的权利限制（未成年人审阅时应由法定监护人陪同）。</b></p>
+    <p><b>本协议包含对用户个人信息和数据收集、使用、保护的《FuncPDF 隐私政策》。您确认，接受本协议即视为您已充分阅读、理解并同意本协议及其附属的《FuncPDF 隐私政策》的全部内容。如果您不能接受本协议中的全部条款，请勿开始使用FuncPDF。</b></p>
+</div>
+
+<div id="account">
+    <h2>一：关于账号</h2>
+    <p>您理解并承诺，您所设置的账号不得违反国家法律法规及本开发者的相关规则，您的账号名称、头像和简介等注册信息及其他个人信息中不得出现违法和不良信息，未经他人许可不得用他人名义开设账号，不得恶意注册 FuncPDF 账号。您在账号注册及使用过程中需遵守相关法律法规，不得实施任何侵害国家利益、损害其他公民合法权益，有害社会道德风尚的行为。本开发者有权对您提交的注册信息进行审核。</p>
+    <p>因您自身原因或其他不可抗因素而导致账号被盗、丢失，均由您本人承担责任，本开发者不承担任何责任。</p>
+</div>
+
+<div id="license">
+    <h2>二：终端用户协议许可</h2>
+    <p>依据本协议规定，<b>FuncPDF</b> 将授予您以下不可转让的、非专有的许可：</p>
+    <ol>
+        <li>使用 <b>FuncPDF</b> 软件服务的权利；</li>
+        <li>在您所有的网络通信设备、计算机设备和移动通信设备上下载、安装、使用 <b>FuncPDF</b> 客户端的权利。</li>
+    </ol>
+</div>
+
+<div id="restrictions">
+    <h2>三：限制性条款</h2>
+    <p>本协议对您的授权将受到以下限制：</p>
+    <ol>
+        <li>您不得对 <b>FuncPDF</b> 进行任何形式的许可、出售、租赁、转让、发行或其他商业用途；</li>
+        <li>除非法律禁止此类限制，否则您不得对 <b>FuncPDF</b> 的任何部分或衍生产品进行修改、翻译、改编、合并、利用、分解、改造或反向编译、反向工程等；</li>
+        <li>您不得以创建相同或竞争服务为目的使用 <b>FuncPDF</b>；</li>
+        <li>除非法律明文规定，否则您不得对 <b>FuncPDF</b> 的任何部分以任何形式或方法进行生产、复制、发行、出售、下载或显示等；</li>
+        <li>您不得删除或破坏包含在 <b>FuncPDF</b> 中的任何版权声明或其他所有权标记。</li>
+    </ol>
+</div>
+
+<div id="fees">
+    <h2>四：费用</h2>
+    <p>您必须自行负担购买 <b>FuncPDF</b> 的费用，个人上网或第三方（包括但不限于电信或移动通讯提供商）收取的通讯费、信息费等相关费用。如涉及电信增值服务，本开发者建议您与增值服务提供商确认相关费用问题。</p>
+</div>
+
+<div id="membership">
+    <h2>五：关于付费会员</h2>
+    <p>任何 <b>FuncPDF</b> 的更新版本或未来版本、更新或者其他变更将受到本协议约束。</p>
+    <p><b>FuncPDF</b> 向用户提供 <b>付费会员</b> 的付费会员服务。</p>
+    <h3>会员类型（以 iOS 平台为例）：</h3>
+    <ul>
+        <li>月会员</li>
+        <li>季会员</li>
+        <li>年会员</li>
+    </ul>
+    <h3>请注意：</h3>
+    <ol>
+        <li>用户需要按照应用内 <b>FuncPDF</b> 会员服务的开通流程和规定付费，具体价格根据地区而异。成功激活后才可使用会员服务，苹果手机用户通过苹果应用内支付，在依约支付一定费用后开通本服务，该服务旨在提供额外的PDF处理能力和高级功能。</li>
+        <li><b>FuncPDF</b> 会员服务费用以您开通服务时，本应用在会员服务页面出示的价格为准。本开发者有权随时自行决定修改会员费用，任何费用更改将在当前的结算周期结束时生效。在购买完会员后，您可以在 APP 的个人中心页面看到会员的到期时间。</li>
+        <li>您所获得的服务的有效期限以您自行选择并支付相应服务费用的期限为准。有效期限过后，会员专属权益将自动取消。</li>
+        <li><b>FuncPDF</b> 会员服务在购买后包含了会员的全部权限和功能，因此已支付款项不予退款，您可在当前会员使用期限结束后停止续费。您支付的价格已包含当地税费。本服务开通后，不可进行转让;无论您是否在相应服务期限内实际使用该服务或访问电子内容，已支付的费用不支持退款。</li>
+        <li><b>针对订阅服务：</b> 购买确认后，将通过您的 iTunes 账户直接支付，购买或者试用后，续订会自动进行，苹果 iTunes 账户会在到期前 24 小时内扣费，扣费成功后订阅周期顺延一个订阅周期。您可以在系统账户设置中修改自动订阅设置，如需取消续订，请至少在当前扣费期前 24 小时进行操作。<b>请注意，取消续订操作需在您的苹果 iTunes 账户设置中手动完成，FuncPDF 应用程序本身无权直接为您操作取消。</b></li>
+    </ol>
+</div>
+
+<div id="compliance">
+    <h2>六：遵守法律</h2>
+    <p>您同意遵守《中华人民共和国合同法》、《中华人民共和国著作权法》及其实施条例等相关中国法律法规的任何及所有的规定，并对以任何方式使用您的密码和您的账号使用本服务的任何行为及其结果承担全部责任。在任何情况下，如果本开发者有理由认为您的任何行为，包括但不限于您的任何言论和其它行为违反或可能违反上述法律和法规的任何规定，本开发者可在任何时候不经任何事先通知终止向您提供服务。</p>
+</div>
+
+<div id="user_content">
+    <h2>七：用户内容</h2>
+    <ol>
+        <li>用户内容是指该用户下载、发布或以其他方式使用 <b>FuncPDF</b> 时产生的所有内容（例如：您的信息、图片、PDF 文件、处理后的文档或其他内容）。</li>
+        <li>您是您的用户内容唯一的责任人，您将承担因您的用户内容披露而导致的您或任何第三方被识别的风险。</li>
+        <li>您已同意您的用户内容受到权利限制（详见“八、权利限制”）。<b>您确认并同意，为实现FuncPDF的PDF处理功能，您授予开发者一项有限的、非排他的、可转让的、免费的权利，用于在提供服务必需的范围内对您的文件进行存储和处理。</b></li>
+    </ol>
+</div>
+
+<div id="rights_restrictions">
+    <h2>八：权利限制</h2>
+    <p>您已同意通过分享或其他方式使用 <b>FuncPDF</b> 中的相关服务，在使用过程中，您将承担因下述行为所造成的风险而产生的全部法律责任：</p>
+    <ol>
+        <li>破坏宪法所确定的基本原则的；</li>
+        <li>危害国家安全、泄露国家秘密、颠覆国家政权、破坏国家统一的；</li>
+        <li>损害国家荣誉和利益的；</li>
+        <li>煽动民族仇恨、民族歧视，破坏民族团结的；</li>
+        <li>破坏国家宗教政策，宣扬邪教和封建迷信的；</li>
+        <li>散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；</li>
+        <li>侮辱或者诽谤他人，侵害他人合法权益的；</li>
+        <li>含有法律、行政法规禁止的其他内容的。</li>
+    </ol>
+    <p>您已经同意不在 <b>FuncPDF</b> 从事下列行为：</p>
+    <ol>
+        <li>发布或分享电脑病毒、蠕虫、恶意代码、故意破坏或改变计算机系统或数据的软件；</li>
+        <li>未授权的情况下，收集其他用户的信息或数据，例如电子邮箱地址等；</li>
+        <li>用自动化的方式恶意使用 <b>FuncPDF</b>，给服务器造成过度的负担或以其他方式干扰或损害网络链接；</li>
+        <li>在未授权的情况下，尝试访问 <b>FuncPDF</b> 的服务器数据或通信数据；</li>
+        <li>干扰、破坏 <b>FuncPDF</b> 其他用户的使用。</li>
+    </ol>
+</div>
+
+<div id="ip_rights">
+    <h2>九：知识产权</h2>
+    <ol>
+        <li><b>FuncPDF 应用程序所有权：</b> FuncPDF 应用程序的所有著作权、商标权、专利权、商业秘密等知识产权，以及与应用程序相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、数据或电子文档等）均由 <b>开发者</b>（zhanhao liu）依法享有或已获得合法授权。</li>
+        <li><b>用户内容所有权：</b> 您通过 FuncPDF 上传、创建、编辑或处理的任何 PDF 文件、数据或内容，其知识产权仍归属于您或原始权利人所有。</li>
+        <li><b>承诺：</b> 开发者承诺不会将您的文件用于任何提供服务以外的目的。</li>
+    </ol>
+</div>
+
+<div id="modification_termination">
+    <h2>十：修改和终止</h2>
+    <h3>修改</h3>
+    <p>本协议容许变更。如果本协议有任何实质性变更，我们将通过电子邮件或应用内通知来通知您。变更通知之后，继续使用 <b>FuncPDF</b> 则为您已知晓此类变更并同意条款约束。 本开发者保留在任何时候无需通知而修改、保留或关闭 <b>FuncPDF</b> 任何服务之权利。您已同意本开发者无需因修改、保留或关闭 <b>FuncPDF</b> 任何服务的行为对您或第三方承担责任。</p>
+    <h3>终止</h3>
+    <ol>
+        <li>本协议自您接受之日起生效，在您使用 <b>FuncPDF</b> 的过程中持续有效，直至依据本协议终止；</li>
+        <li>无论是否通知，本开发者将在任何时间以任何原因终止本协议，包括出于善意的相信您违反了我们可接受使用政策或本协议的其他规定；</li>
+        <li>一旦本协议终止，您使用 <b>FuncPDF</b> 的权利即告终止。您应当知晓您的产品终止意味着您的用户内容将从我们的活动数据库中删除。本开发者不因终止本协议对您承担任何责任，包括终止您的用户账户和删除您的用户内容。</li>
+    </ol>
+</div>
+
+<div id="third_party">
+    <h2>十一：第三方</h2>
+    <p>您已知晓或同意我们的部分服务是基于第三方的技术支持获得。您已知晓本协议是您在与<b>开发者</b>之间签订，而非您与上述第三方之间签订。<b>开发者</b>是基于 <b>FuncPDF</b> 所产生的内容、维护、支持服务、保证和由此产生的诉讼等事项的唯一责任人。您已同意遵守且授权给 <b>FuncPDF</b> 限制您有条件地使用 <b>FuncPDF</b> 的服务。</p>
+</div>
+
+<div id="third_party_services">
+    <h2>十二：第三方信息和服务</h2>
+    <ol>
+        <li><b>FuncPDF</b> 包含了第三方的部分信息和服务。本开发者不控制且不对第三方的信息和服务负责；</li>
+        <li>本开发者仅为您使用方便的目的或为承诺和保证第三方的需要而提供此类信息和服务；</li>
+        <li>用户需对使用第三方信息和服务产生的风险承担法律责任；</li>
+        <li>当用户访问第三方信息和服务时，适用第三方的条款和政策。</li>
+    </ol>
+</div>
+
+<div id="indemnification">
+    <h2>十三：赔偿</h2>
+    <p>您已同意无害地使用 <b>FuncPDF</b>，避免因下述行为或相关行为遭受来第三方的任何投诉、诉讼、损失、损害、责任、成本和费用（包括律师费）：</p>
+    <ol>
+        <li>用户使用 <b>FuncPDF</b> 的行为；</li>
+        <li>用户的用户内容；</li>
+        <li>用户违反本协议的行为。</li>
+    </ol>
+    <p>本开发者保留专属抗辩权和请求赔偿的权利。</p>
+    <p>在任何情况下，<b>FuncPDF</b> 都不对您或任何第三方因本协议产生的任何间接性、后果性、惩罚性的、偶然的、特殊或惩罚性的损害赔偿承担责任。访问、使用 <b>FuncPDF</b> 所产生的损坏计算机系统或移动通讯设备数据的风险将由您个人承担。</p>
+</div>
+
+<div id="governing_law">
+    <h2>十四：适用法律及争议解决</h2>
+    <p>本协议适用中华人民共和国法律；</p>
+    <p>如果双方发生纠纷，应本着友好的原则协商解决；如协商不成，双方一致同意将争议提交至 <b>中华人民共和国</b> 有管辖权的人民法院提起诉讼。</p>
+</div>
+
+<div id="severability">
+    <h2>十五：独立性</h2>
+    <p>本协议中的某些条款因故无法适用，则本协议的其他条款继续适用且无法适用的条款将会被修改，以便其能够依法适用。</p>
+</div>
+
+<div id="entire_agreement">
+    <h2>十六：完整性</h2>
+    <p>本协议是您和 <b>FuncPDF</b> 之间关于 <b>FuncPDF</b> 相关事项的最终的、完整的、排他的协议，且取代和合并之前当事人关于此类事项（包括之前的最终用户许可、服务条款和隐私政策）的讨论和协议。</p>
+</div>
+
+<div id="contact">
+    <h2>十七：联系我们</h2>
+    <p>如果您对本协议有任何疑问或需要提出请求，请通过以下方式联系我们：</p>
+    <p><b>电子邮箱：</b> func_app@163.com<br>
+    <b>服务提供者：</b> zhanhao liu</p>
+</div>
+
+</body>
+</html>
