--- a/FuncPDF/UserAgreementCN.html
+++ b/FuncPDF/UserAgreementCN.html
@@ -111,7 +111,7 @@
     <ol>
         <li>用户内容是指该用户下载、发布或以其他方式使用 <b>FuncPDF</b> 时产生的所有内容（例如：您的信息、图片、PDF 文件、处理后的文档或其他内容）。</li>
         <li>您是您的用户内容唯一的责任人，您将承担因您的用户内容披露而导致的您或任何第三方被识别的风险。</li>
-        <li>您已同意您的用户内容受到权利限制（详见“八、权利限制”）。<b>您确认并同意，为实现FuncPDF的PDF处理功能，您授予开发者一项有限的、非排他的、可转让的、免费的权利，用于在提供服务必需的范围内对您的文件进行存储和处理。</b></li>
+        <li>您已同意您的用户内容受到权利限制（详见“八、权利限制”）。<b>您确认并同意，为实现FuncPDF的PDF处理功能以及优化App体验、衡量广告效果等目的，您授予开发者一项有限的、非排他的、可转让的、免费的权利，用于在提供服务必需的范围内对您的文件进行存储和处理，以及对您的设备和使用信息进行收集和使用（详见《FuncPDF 隐私政策》）。</b></li>
     </ol>
 </div>
 
@@ -161,16 +161,15 @@
 
 <div id="third_party">
     <h2>十一：第三方</h2>
-    <p>您已知晓或同意我们的部分服务是基于第三方的技术支持获得。您已知晓本协议是您在与<b>开发者</b>之间签订，而非您与上述第三方之间签订。<b>开发者</b>是基于 <b>FuncPDF</b> 所产生的内容、维护、支持服务、保证和由此产生的诉讼等事项的唯一责任人。您已同意遵守且授权给 <b>FuncPDF</b> 限制您有条件地使用 <b>FuncPDF</b> 的服务。</p>
+    <p>您已知晓或同意我们的部分服务是基于第三方的技术支持获得，包括但不限于提供广告和分析服务。您已知晓本协议是您在与<b>开发者</b>之间签订，而非您与上述第三方之间签订。<b>开发者</b>是基于 <b>FuncPDF</b> 所产生的内容、维护、支持服务、保证和由此产生的诉讼等事项的唯一责任人。您已同意遵守且授权给 <b>FuncPDF</b> 限制您有条件地使用 <b>FuncPDF</b> 的服务。</p>
 </div>
 
 <div id="third_party_services">
     <h2>十二：第三方信息和服务</h2>
     <ol>
-        <li><b>FuncPDF</b> 包含了第三方的部分信息和服务。本开发者不控制且不对第三方的信息和服务负责；</li>
+        <li><b>FuncPDF</b> 包含了第三方的部分信息和服务，包括第三方提供的广告内容。本开发者不控制且不对第三方的信息和服务（包括广告）负责；</li>
         <li>本开发者仅为您使用方便的目的或为承诺和保证第三方的需要而提供此类信息和服务；</li>
-        <li>用户需对使用第三方信息和服务产生的风险承担法律责任；</li>
-        <li>当用户访问第三方信息和服务时，适用第三方的条款和政策。</li>
+        <li>用户需对使用第三方信息和服务产生的风险承担法律责任。<b>请注意，当您与第三方服务（包括广告）互动时，您的数据可能根据《FuncPDF 隐私政策》与该第三方共享，并适用该第三方的条款和政策。</b></li>
     </ol>
 </div>
 
@@ -206,7 +205,7 @@
     <h2>十七：联系我们</h2>
     <p>如果您对本协议有任何疑问或需要提出请求，请通过以下方式联系我们：</p>
     <p><b>电子邮箱：</b> func_app@163.com<br>
-    <b>服务提供者：</b> zhanhao liu</p>
+        <b>服务提供者：</b> zhanhao liu</p>
 </div>
 
 </body>
