--- a/FuncPDF/PrivacyPolicy.html
+++ b/FuncPDF/PrivacyPolicy.html
@@ -184,10 +184,9 @@
 <div class="contact">
     <h3>Contact Us</h3>
     <p>If you have any questions, comments, or suggestions about this Privacy Policy, please contact us through the following methods:</p>
-    <p><b>Email:</b> <a href="/cdn-cgi/l/email-protection#5137243f320e302121116067627f323e3c"><span class="__cf_email__" data-cfemail="b9dfccd7dae6d8c9c9f9888f8a97dad6d4">[email&#160;protected]</span></a></p>
+    <p><b>Email:</b> <a href="mailto:func_app@163.com">func_app@163.com</a></p>
     <p><b>Service Provider:</b> zhanhao liu</p>
 </div>
 
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"b7cd013fca104fbd9ba9cb1735ea6d5e","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
 </html>
